--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "description": "Simple URL shortener with localStorage",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "nodemon server.js"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.22"
   }
 }
